--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,4 +61,12 @@
         android:layout_below="@id/btn_6"
         android:text="Data Different"
         android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/btn_8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_6"
+        android:text="Scheme call"
+        android:textAllCaps="false" />
 </RelativeLayout>
