--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,15 @@
         android:id="@+id/btn_8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_6"
-        android:text="Scheme call"
+        android:layout_below="@id/btn_7"
+        android:text="Scheme call Weibo"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/btn_9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_8"
+        android:text="Scheme call Baidu"
         android:textAllCaps="false" />
 </RelativeLayout>
