--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,4 +77,12 @@
         android:layout_below="@id/btn_8"
         android:text="Scheme call Baidu"
         android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/btn_10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_9"
+        android:text="Dialog WindowsLeak"
+        android:textAllCaps="false" />
 </RelativeLayout>
