Feature:添加web测试功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,5 +111,13 @@
             android:layout_height="wrap_content"
             android:text="Start SinaNews MainActivity"
             android:textAllCaps="false" />
+
+
+        <Button
+            android:id="@+id/btn_15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start WebView Activity"
+            android:textAllCaps="false" />
     </LinearLayout>
 </ScrollView>
