--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,5 +119,12 @@
             android:layout_height="wrap_content"
             android:text="Start WebView Activity"
             android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start ShortVideo Activity"
+            android:textAllCaps="false" />
     </LinearLayout>
 </ScrollView>
