--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,5 +132,13 @@
             android:layout_height="wrap_content"
             android:text="Danmu RecycleView"
             android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PIP"
+            android:textAllCaps="false" />
+
     </LinearLayout>
 </ScrollView>
